<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:id="@+id/fragment_signin_scroll_view">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium">

        <br.com.taqtile.android.edittexts.EmailLabelEditTextCaption
            style="@style/AppEditText"
            android:id="@+id/fragment_signin_email_cpf_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TQ_required="true"/>

        <br.com.taqtile.android.edittexts.PasswordLabelEditTextCaption
            style="@style/AppEditText"
            android:id="@+id/fragment_signin_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TQ_required="true"/>

        <com.taqtile.tq1demo.buttons.TemplateButton
            android:id="@+id/fragment_signin_forgot_button"
            style="@style/AppButton.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="right"
            android:text="@string/fragment_signin_forgot_button_text"/>


        <com.taqtile.tq1demo.buttons.TemplateButton
            android:id="@+id/fragment_signin_signin_button"
            style="@style/AppButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/fragment_signin_signin_button_text"/>

        <com.taqtile.tq1demo.buttons.TemplateButton
            android:id="@+id/fragment_signin_facebook_button"
            style="@style/AppButton.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:drawableLeft="@drawable/ic_facebook_small"
            android:text="@string/fragment_signin_facebook_button_text"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center_vertical">

            <View
                style="@style/Separator_Horizontal"
                android:layout_width="0dp"
                android:layout_height="@dimen/universal_1_pixel"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/or"/>

            <View
                style="@style/Separator_Horizontal"
                android:layout_width="0dp"
                android:layout_height="@dimen/universal_1_pixel"
                android:layout_weight="1"/>

        </LinearLayout>

        <com.taqtile.tq1demo.buttons.TemplateButton
            android:id="@+id/fragment_signin_signup_link_button"
            style="@style/AppButton.Neutral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium"
            android:drawableLeft="@drawable/ic_account_circle"
            android:text="@string/fragment_signin_signup_link_button_text" />

    </LinearLayout>

</ScrollView>